--- a/src/App.css
+++ b/src/App.css
@@ -22,161 +22,112 @@ h2 {
   display: flex;
   align-items: center;
   justify-content: center;
+  background-image: url(./background.jpeg);
+  background-repeat: no-repeat;
+  background-size: cover;
   height: 100vh;
-  background-image: url(background.jpeg);
 }
 
 .Card {
-  min-width: 1000px;
-  min-height: 600px;
+  width: 90%;
+  height: 85%;
   background: var(--white);
-  display: flex;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
   align-items: center;
-  justify-content: center;
-  flex-wrap: nowrap;
   border-radius: 20px;
 }
 
-.Left-container {
-  display: grid;
-  grid-template-rows: 50% 50%;
-  margin-right: 50px;
-}
-
-.Left-container button {
-  position: relative;
-  top: 100px;
-  left: 40px;
-}
-
-.Right-container {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 50% 50%;
-  gap: 20px;
-}
-
-.Name {
-  width: 200px;
-  height: 200px;
-
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-}
-.Name p {
-  margin-top: 5px;
-  background: var(--darker-white);
-  padding: 5px;
-  border-radius: 6px;
-}
-
-.Location {
-  width: 200px;
-  height: 200px;
-
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-}
-
-.Location p {
-  margin-top: 5px;
-  background: var(--darker-white);
-  padding: 5px;
-  border-radius: 6px;
-}
-
-.Age {
-  width: 200px;
-  height: 200px;
-
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-}
-
-.Age p {
-  margin-top: 5px;
-  background: var(--darker-white);
-  padding: 5px;
-  border-radius: 6px;
-}
-
-.Email {
-  width: 200px;
-  height: 200px;
-
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-}
-
-.Email p {
-  margin-top: 5px;
-  background: var(--darker-white);
-  padding: 5px;
-  border-radius: 6px;
-}
-
-.Gender {
-  width: 200px;
-  height: 200px;
-
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-}
-
-.Gender p {
-  margin-top: 5px;
-  background: var(--darker-white);
-  padding: 5px;
-  border-radius: 6px;
-}
-
-.Cell-phone {
-  width: 200px;
-  height: 200px;
-
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-}
-
-.Cell-phone p {
-  margin-top: 5px;
-  background: var(--darker-white);
-  padding: 5px;
-  border-radius: 6px;
-}
-
-.Profile-picture {
-  width: 200px;
-  height: 200px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  position: relative;
-  bottom: 150px;
-  flex-direction: column;
+.Image {
+  grid-column: 1/2;
+  grid-row: 1/3;
+  align-self: center;
+  justify-self: center;
+  z-index: 4;
 }
 
 img {
-  width: 100%;
-  height: 100%;
   border-radius: 50%;
-  position: relative;
-  top: 40px;
+  margin-right: 50px;
+  width: 95%;
+  height: 95%;
+}
+
+p {
+  background: var(--darker-white);
+  display: inline-block;
+  border-radius: 5px;
+  padding: 5px;
+}
+
+.Button {
+  grid-row: 3/4;
+  grid-column: 1/2;
+  align-self: center;
+  justify-self: center;
 }
 
 button {
-  border-radius: 5px;
-  box-shadow: none;
+  box-shadow: inset 0px 1px 0px 0px #ffffff;
+  background: linear-gradient(to bottom, #ffffff 5%, #f6f6f6 100%);
+  background-color: var(--darker-white);
+  border-radius: 6px;
+  border: 1px solid #dcdcdc;
+  display: inline-block;
+  cursor: pointer;
+  color: #666666;
+  font-family: Arial;
+  font-size: 15px;
+  font-weight: bold;
+  padding: 6px 24px;
+  text-decoration: none;
+  text-shadow: 0px 1px 0px #ffffff;
+  margin-bottom: 160px;
+  margin-right: 10px;
+}
+
+button:hover {
+  background: linear-gradient(to bottom, #f6f6f6 5%, #ffffff 100%);
+  background-color: #f6f6f6;
+}
+
+button:active {
+  position: relative;
+  top: 1px;
+}
+
+.BlueBall {
+  position: absolute;
+  background: var(--blue);
+  width: 130px;
+  height: 130px;
+  border-radius: 50%;
+  left: 200px;
+  top: 100px;
+  z-index: 3;
+}
+.PurpleBall {
+  position: absolute;
+  background: var(--purple);
+  position: absolute;
+  width: 130px;
+  height: 130px;
+  border-radius: 50%;
+  left: 160px;
+  top: 105px;
+  z-index: 2;
+}
+.BlackFigure {
+  position: absolute;
+  background: var(--black);
+  width: 235px;
+  height: 100px;
+  border-radius: 30px;
+  left: 150px;
+  top: 170px;
+  z-index: 1;
+  transform: rotate(20deg);
+  border-top-right-radius: 90px;
+  border-bottom-right-radius: 70px;
 }
