--- a/src/App.css
+++ b/src/App.css
@@ -44,7 +44,6 @@ h2 {
   grid-row: 1/3;
   align-self: center;
   justify-self: center;
-  z-index: 4;
 }
 
 img {
@@ -95,4 +94,36 @@ button:hover {
 button:active {
   position: relative;
   top: 1px;
+}
+
+@media screen and (max-width: 768px) {
+  .Wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-image: url(./background.jpeg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 100%;
+  }
+
+  .Flex-item {
+    margin: 3px 0px 3px 0px;
+  }
+
+  button {
+    margin: 0px;
+  }
+
+  .Button {
+    order: 9;
+  }
+
+  .Card {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    width: 90%;
+    height: 100vh;
+  }
 }
